--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ See the end for copying conditions.
 
 * Changes in 0.0.8 (unreleased)
 
+** Man pages for all public functions are included.
+
 ** GNULib is used for compatibility functions.
 The directory gl/ is dedicated for GNULib functions, and replace the
 earlier ad-hoc usage of argp, memset, etc.
