--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,12 @@ See the end for copying conditions.
 
 * Changes in 0.0.8 (unreleased)
 
+** Improve GSSAPI implementation detection.
+Auto detection should work, unless you have both MIT and Heimdal
+installed, or wish to override the preference to use GSS over
+MIT/Heimdal.  In that case, you can --enable-gssapi=mit or
+--enable-gssapi=heimdal.
+
 ** GNU SASL contain APIs for internationalized string processing.
 You no longer have to use Libidn directly for this.  The currently
 supported functions are gsasl_stringprep_nfkc,
