--- a/THANKS
+++ b/THANKS
@@ -9,6 +9,7 @@ borrowed from Libgcrypt.
 
 Bug reports, patches and/or suggestions were also received from:
 
+Lars Engebretsen
 Andorz Nilsson
 Sergey Poznyakoff
 
