--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@ See the end for copying conditions.
 
 * Changes in 0.0.8 (unreleased)
 
-** Improve GSSAPI implementation detection.
+** Improved GSSAPI implementation detection.
 Auto detection should work, unless you have both MIT and Heimdal
 installed, or wish to override the preference to use GSS over
 MIT/Heimdal.  In that case, you can --enable-gssapi=mit or
