--- a/NEWS
+++ b/NEWS
@@ -46,6 +46,9 @@ gsasl_client_mechlist: NEW.
 gsasl_server_mechlist: NEW.
 gsasl_client_listmech: DEPRECATED: use gsasl_client_mechlist instead.
 gsasl_server_listmech: DEPRECATED: use gsasl_server_mechlist instead.
+gsasl_stringprep_nfkc: NEW.
+gsasl_stringprep_saslprep: NEW.
+gsasl_stringprep_trace: NEW.
 
 * Changes in 0.0.7 (released 2003-06-02)
 
