--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GNU SASL NEWS -- history of user-visible changes.               -*- outline -*-
 Copyright (C) 2002, 2003 Simon Josefsson
 See the end for copying conditions.
 
-* Changes in 0.0.8 (unreleased)
+* Changes in 0.0.8 (released 2003-10-11)
 
 ** Improved GSSAPI implementation detection.
 Auto detection should work, unless you have both MIT and Heimdal, or
